gallery fix stretched images

--- a/htdocs/templates/themes/default/styles.css
+++ b/htdocs/templates/themes/default/styles.css
@@ -5243,9 +5243,14 @@ div.gallery {
 	position:relative;
 }
 
+div.carouselImages {
+    overflow: hidden;
+    padding-bottom: 5px;
+}
+
 div.carouselImages img.gallery_image {
 	margin-top: 10px;
-	width:140px;
+	/*width:140px;*/
 	height:80px;
 	-moz-box-shadow: 0px 2px 5px 1px #BBBBBB;
 	-webkit-box-shadow: 0px 2px 5px 1px #BBBBBB;
